--- a/Sam3Sharp/Sam3Sharp.csproj
+++ b/Sam3Sharp/Sam3Sharp.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.23.2" />
+      <PackageReference Include="Microsoft.ML.OnnxRuntime.Gpu.Windows" Version="1.23.2" />
       <PackageReference Include="SixLabors.Fonts" Version="2.1.3" />
       <PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
       <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.7" />
