--- a/Sam3Server/appsettings.json
+++ b/Sam3Server/appsettings.json
@@ -1,9 +1,7 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"sam3": {
+		"model_path": "F:\\zb\\flycheck\\rsam3\\model",
+		"use_cuda": false
+	},
+	"AllowedHosts": "*"
 }
