--- a/Sam3Server/Sam3Server.csproj
+++ b/Sam3Server/Sam3Server.csproj
@@ -12,4 +12,8 @@
         <PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Sam3Sharp\Sam3Sharp.csproj" />
+    </ItemGroup>
+
 </Project>
