--- a/Sam3Server/Sam3Server.csproj
+++ b/Sam3Server/Sam3Server.csproj
@@ -10,6 +10,7 @@
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.1"/>
         <PackageReference Include="NLog.Extensions.Logging" Version="6.1.0" />
         <PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
+        <PackageReference Include="Tokenizers.DotNet.runtime.win-x64" Version="1.3.0" />
     </ItemGroup>
 
     <ItemGroup>
