--- a/Sam3Server/appsettings.json
+++ b/Sam3Server/appsettings.json
@@ -1,8 +1,8 @@
 {
 	"urls": "http://localhost:9021",
 	"sam3": {
-		"model_path": "F:\\zb\\flycheck\\rsam3\\model",
-		"use_cuda": false
+		"model_path": "F:\\ai\\models\\sam3",
+		"use_cuda": true
 	},
 	"AllowedHosts": "*"
 }
