--- a/Sam3Sharp/Sam3Sharp.csproj
+++ b/Sam3Sharp/Sam3Sharp.csproj
@@ -12,6 +12,7 @@
       <PackageReference Include="SixLabors.Fonts" Version="2.1.3" />
       <PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
       <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.7" />
+      <PackageReference Include="System.Numerics.Tensors" Version="10.0.2" />
       <PackageReference Include="Tokenizers.DotNet" Version="1.3.0" />
     </ItemGroup>
 
