--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="Microsoft.ML.OnnxRuntime.Gpu.Windows" Version="1.23.2" />
       <PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
       <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.7" />
+      <PackageReference Include="System.Numerics.Tensors" Version="10.0.2" />
       <PackageReference Include="Tokenizers.DotNet" Version="1.3.0" />
       <PackageReference Include="Tokenizers.DotNet.runtime.win-x64" Version="1.3.0" />
     </ItemGroup>
